# firmware

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  README.md  config.toml  config.toml.example
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/esp/: devcontainer.json
.devcontainer/esp-riscv/: devcontainer.json
.devcontainer/esp-xtensa/: devcontainer.json
.devcontainer/pc/: devcontainer.json
.github/workflows/: auto-release.yml  auto-tag.yml  ci.yml  release.yml
boards/esp/: Cargo.toml  main.template.rs  tests.template.rs  xtask_builder.rs
boards/esp/src/: can.rs  lib.rs  main.rs  network.rs
boards/esp/src/ble/: lifecycle.rs  mod.rs  store.rs  transport.rs
boards/esp/tests/: hardware.rs
boards/pc/: Cargo.toml  main.template.rs  xtask_builder.rs
boards/pc/src/: ble.rs  can.rs  lib.rs  main.rs  network.rs
boards/rpi/: Cargo.toml  main.template.rs  xtask_builder.rs
boards/rpi/src/: lib.rs
cars/virtual-car/: Cargo.toml  build.rs
cars/virtual-car/src/: lib.rs
cars/virtual-car/tests/: simulation.rs
core-interface/: Cargo.toml  build.rs
core-interface/src/: ble.rs  can.rs  can_debug.rs  channels.rs  dispatch.rs  lib.rs  lifecycle.rs  pairing.rs  routing.rs  types.rs
core-interface/tests/: can_debug.rs  can_read_only.rs  dispatch.rs  filter.rs  pairing.rs  routing.rs
docs/: windows-setup.md
xtask/: Cargo.toml  build.rs
xtask/src/: main.rs
