[workspace]
members = [
    "core-interface",
    "cars/*",
    "boards/*",
    "xtask"
]
exclude = [
    ".app_build"
]
resolver = "3"

default-members = [
    "core-interface",
    "cars/*"
]

[workspace.dependencies]
core-interface = { path = "core-interface" }
prost = { version = "0.14.3", default-features = false, features = [ "derive" ]}
prost-build = "0.14.3"
bytes = { version = "=1.11.1", default-features = false }

embedded-can = "0.4.1"
embedded-hal = "1.0.0"
embedded-io-async = { version = "0.7", default-features = false }

embassy-executor = { version = "0.9.1", default-features = false }
embassy-time = { version = "0.5.1", default-features = false }
embassy-sync = "0.7.0"
embassy-futures = "0.1.2"

critical-section = { version = "1.2.0", features = ["std"] }
rust-mqtt = { version = "0.5.1", default-features = false, features = ["v5", "alloc"] }
log = "0.4.29"

# ESP firmware stack (used by board-esp and generated .app_build / .app_test_build)
esp-hal      = { version = "=1.0.0", default-features = false }
esp-rtos     = { version = "0.2.0",  default-features = false }
esp-alloc    = "0.9.0"
esp-backtrace = { version = "0.18.1", default-features = false }
esp-println  = { version = "0.16.1", default-features = false }
esp-radio              = { version = "0.17.0", default-features = false }
esp-storage            = { version = "0.8.1",  default-features = false }
esp-bootloader-esp-idf = { version = "0.4.0",  default-features = false }
static_cell  = "2.1.1"

# On-hardware test toolchain (used by generated .app_test_build only)
embedded-test = { version = "0.7",  default-features = false }
defmt         = "0.3"
defmt-rtt     = "0.4"
panic-probe   = { version = "0.3",  default-features = false }
