[package]
name = "core-interface"
version = "0.1.0"
edition = "2024"

[dependencies]
embedded-can = "0.4.1"
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embassy-executor = { version = "0.9.1", default-features = false }
embassy-time = { version = "0.5.1", default-features = false }
embassy-sync = "0.7"
prost = { workspace = true }
bytes ={ workspace = true }

[build-dependencies]
prost-build = { workspace = true }
