[package]
name = "core-interface"
version = "0.1.0"
edition = "2024"

[dependencies]
embedded-can = { workspace = true }
embedded-hal = { workspace = true }
embedded-hal-async = "1.0.0"
embassy-executor = { workspace = true }
embassy-time = { workspace = true }
embassy-sync = { workspace = true }
prost = { workspace = true }
bytes = { workspace = true }

[build-dependencies]
prost-build = { workspace = true }
toml = "1.1.0"

[dev-dependencies]
critical-section = { workspace = true }
embassy-futures = { workspace = true }
embassy-time = { workspace = true, features = ["std"] }
