[package]
name = "board-esp"
version = "0.1.0"
edition = "2024"

[features]
# Enables all ESP HAL and peripheral driver dependencies.
# Required for firmware builds; omit when running host-side unit tests
# (e.g. `cargo test -p board-esp` or `cargo xtask test`).
hardware = [
    "dep:esp-hal",
    "dep:esp-rtos",
    "dep:esp-println",
    "dep:log",
    "dep:embassy-executor",
    "dep:embassy-time",
    "dep:embassy-net",
    "dep:embedded-hal",
    "dep:embedded-hal-bus",
    "dep:embedded-io-async",
    "dep:esp-radio",
    "dep:rust-mqtt",
    "dep:prost",
    "dep:smoltcp",
    "dep:mcp2515",
    "dep:nb",
    "dep:static_cell",
    "dep:embassy-futures",
    "dep:embassy-sync",
    "dep:trouble-host",
    "dep:heapless",
    "dep:esp-storage",
    "dep:embedded-storage",
]

[dependencies]
core-interface   = { workspace = true }
embedded-can     = { workspace = true }
esp-hal          = { workspace = true, features = ["unstable"],                            optional = true }
esp-rtos         = { workspace = true, features = ["embassy", "esp-radio", "esp-alloc"],   optional = true }
esp-println      = { workspace = true, features = ["log-04"],                               optional = true }
log              = { workspace = true,                                            optional = true }
embassy-executor = { workspace = true,                                           optional = true }
embassy-time     = { workspace = true,                                           optional = true }
embedded-hal     = { workspace = true,                                           optional = true }
embedded-hal-bus = { version = "0.3.0",                                          optional = true }
embassy-net      = { version = "0.9.0", features = ["tcp", "dhcpv4", "medium-ethernet"], optional = true }
embedded-io-async = { workspace = true,                                          optional = true }
esp-radio        = { workspace = true, features = ["wifi", "ble", "smoltcp", "unstable"], optional = true }
rust-mqtt        = { workspace = true,                                           optional = true }
prost            = { workspace = true,                                           optional = true }
smoltcp          = { version = "0.12.0", default-features = false, features = ["socket-tcp", "proto-ipv4"], optional = true }
static_cell      = { workspace = true,                                                      optional = true }
mcp2515          = { version = "0.3.0",                          optional = true }
nb               = { version = "1.1.0",                          optional = true }
embassy-futures  = { workspace = true,                                           optional = true }
embassy-sync     = { workspace = true,                                           optional = true }
trouble-host     = { version = "0.5.0", features = ["derive", "peripheral", "gatt", "security", "default-packet-pool-mtu-255"], optional = true }
heapless         = { version = "0.9.2",                          optional = true }
esp-storage      = { workspace = true, features = ["critical-section"],                   optional = true }
embedded-storage = { version = "0.3.1",                          optional = true }

[dev-dependencies]
prost = { workspace = true }
