[package]
name = "board-esp"
version = "0.1.0"
edition = "2024"

[features]
# Enables all ESP HAL and peripheral driver dependencies.
# Required for firmware builds; omit when running host-side unit tests
# (e.g. `cargo test -p board-esp` or `cargo xtask test`).
hardware = [
    "dep:embassy-executor",
    "dep:embassy-futures",
    "dep:embassy-net",
    "dep:embassy-sync",
    "dep:embassy-time",
    "dep:embedded-hal-bus",
    "dep:embedded-hal",
    "dep:embedded-io-async",
    "dep:embedded-storage",
    "dep:esp-hal",
    "dep:esp-println",
    "dep:esp-radio",
    "dep:esp-rtos",
    "dep:esp-storage",
    "dep:heapless",
    "dep:log",
    "dep:mcp2515",
    "dep:nb",
    "dep:prost",
    "dep:rust-mqtt",
    "dep:static_cell",
    "dep:bt-hci",
    "dep:trouble-host",
    "dep:sequential-storage",
    "dep:embassy-embedded-hal",
    "dep:embedded-storage-async",
    "dep:rand_core",
]

# Development features — enable hardware + a specific chip for rust-analyzer IDE support.
# Usage: set rust-analyzer.cargo.features = ["dev-esp32s3"] in .vscode/settings.json.
dev-esp32   = [
    "hardware",
    "esp-hal/esp32",
    "esp-println/esp32", "esp-println/auto",
    "esp-radio/esp32",
    "esp-rtos/esp32",
    "esp-storage/esp32",
]
dev-esp32s3 = [
    "hardware",
    "esp-hal/esp32s3",
    "esp-println/esp32s3", "esp-println/auto",
    "esp-radio/esp32s3",
    "esp-rtos/esp32s3",
    "esp-storage/esp32s3",
]
dev-esp32c3 = [
    "hardware",
    "esp-hal/esp32c3",
    "esp-println/esp32c3", "esp-println/auto",
    "esp-radio/esp32c3",
    "esp-rtos/esp32c3",
    "esp-storage/esp32c3",
]
dev-esp32c6 = [
    "hardware",
    "esp-hal/esp32c6",
    "esp-println/esp32c6", "esp-println/auto",
    "esp-radio/esp32c6",
    "esp-rtos/esp32c6",
    "esp-storage/esp32c6",
]

[dependencies]
core-interface = { workspace = true }
embassy-executor = { workspace = true, optional = true }
embassy-futures = { workspace = true, optional = true }
embassy-net = { version = "0.9.0", features = ["tcp", "dhcpv4", "medium-ethernet"], optional = true }
embassy-sync = { workspace = true, optional = true }
embassy-time = { workspace = true, optional = true }
embedded-can = { workspace = true }
embedded-hal = { workspace = true, optional = true }
embedded-hal-bus = { version = "0.3.0", optional = true }
embedded-io-async = { workspace = true, optional = true }
embedded-storage = { version = "0.3.1", optional = true }
esp-hal = { version = "=1.1.0", default-features = false, features = ["unstable"], optional = true }
esp-println = { version = "0.17.0", default-features = false, features = ["log-04"], optional = true }
esp-radio = { version = "0.18.0", default-features = false, features = ["wifi", "ble", "unstable"], optional = true }
esp-rtos = { version = "0.3.0", default-features = false, features = ["embassy", "esp-radio", "esp-alloc"], optional = true }
esp-storage = { version = "0.9.0", default-features = false, features = ["critical-section"], optional = true }
heapless = { version = "0.9.2", optional = true }
log = { workspace = true, optional = true }
mcp2515 = { version = "0.3.0", optional = true }
nb = { version = "1.1.0", optional = true }
prost = { workspace = true, optional = true }
rust-mqtt = { workspace = true, optional = true }
static_cell = { version = "2.1.1", optional = true }
bt-hci = { version = "0.8.1", default-features = false, optional = true }
trouble-host = { version = "0.6.0", features = ["derive", "security", "default-packet-pool-mtu-255"], optional = true }
sequential-storage = { version = "4", optional = true }
embassy-embedded-hal = { version = "0.6.0", optional = true }
embedded-storage-async = { version = "0.4", optional = true }
rand_core = { version = "0.6", default-features = false, optional = true }

[dev-dependencies]
prost = { workspace = true }

# Versions for crates injected into generated .app_build / .app_test_build by xtask.
# These are not direct dependencies of board-esp itself.
[package.metadata.xtask-only-deps]
esp-alloc = "0.10.0"
esp-backtrace = "0.19.0"
esp-bootloader-esp-idf = "0.5.0"
embedded-test = "0.7"
