[package]
name = "board-pc"
version = "0.1.0"
edition = "2024"

[dependencies]
core-interface    = { path = "../../core-interface" }
embedded-can      = "0.4.1"
embassy-executor  = { version = "0.9.1", default-features = false }
embassy-time      = { version = "0.5.1", default-features = false }
critical-section  = { version = "1", features = ["std"] }
socketcan         = { version = "3", default-features = false }
rust-mqtt         = { version = "0.5.1", features = ["v5", "alloc", "log"] }
embedded-io-async = { version = "0.7", features = ["std"] }
prost             = { workspace = true }
log               = "0.4"
