[package]
name = "board-pc"
version = "0.1.0"
edition = "2024"

[dependencies]
core-interface    = { workspace = true }
embedded-can      = { workspace = true }
embassy-executor  = { workspace = true }
embassy-time      = { workspace = true }
critical-section  = { workspace = true }
socketcan         = { version = "3.5.0", default-features = false }
rust-mqtt         = { workspace = true, features = ["log"] }
embedded-io-async = { workspace = true, features = ["std"] }
prost             = { workspace = true }
log               = { workspace = true }

[dev-dependencies]
embassy-futures   = { workspace = true }
